search bar added

--- a/frontend/home.html
+++ b/frontend/home.html
@@ -23,5 +23,14 @@
         </nav>
         <a class="cta" href="#"><button>Sign Up</button></a>
     </header>
+    <div class="searchbox">
+        <form action="" class="search-bar">
+            <button type="submit"><img src="images/search.png"></button>
+            <input type="text" placeholder="Search Products" name="q">
+            
+
+        </form>
+
+    </div>
 </body>
 </html>
